- handling missing alignment for quiz mode - fixing sort order of inflection table headers for quiz mode - correcting display of dictionary source in quiz mode

--- a/basic-reader/trunk/skin/alpheios.css
+++ b/basic-reader/trunk/skin/alpheios.css
@@ -340,7 +340,7 @@ div.alph-morph {
     clear: both;
 }
 
-.alph-dict .alph-dict-source {
+.alph-dict-source {
     font-size: small;
     color: #4E6476;
     font-style: italic;
